--- a/views/article.pug
+++ b/views/article.pug
@@ -41,7 +41,7 @@ block contents
 
 
         //- 评论
-        .commment.default-box
+        .comment.default-box
           fieldset.text-center
               legend 评论
           div.txt
