--- a/views/admin/admin-userface.pug
+++ b/views/admin/admin-userface.pug
@@ -20,7 +20,7 @@ block main
         elem: '#upload'
         ,url: '/upload'
         ,size: 60 //限制文件大小，单位 KB
-        ,done: function(res){
+        ,done(res){
           layer.alert(res.message)
         }
       });
