修复了一些已知的错误

--- a/views/layout/layout.pug
+++ b/views/layout/layout.pug
@@ -3,7 +3,7 @@ html
   head
     title= title
     meta(charset="utf-8")
-    meta(name="author", content="fengyu")
+    meta(name="author", content="shulan")
     link(rel="stylesheet", href="/layui/css/layui.css")
     link(rel="stylesheet", href="/css/nav.css")
     block css
