--- a/views/admin/admin.pug
+++ b/views/admin/admin.pug
@@ -4,7 +4,7 @@ html
   head
     title 后台管理
     meta(charset="utf-8")
-    meta(name="author", content="fengyu")
+    meta(name="author", content="shulan")
     link(rel="stylesheet", href="/layui/css/layui.css")
     link(rel="stylesheet", href="/css/nav.css")
     script(src="/layui/layui.js")
@@ -23,7 +23,7 @@ html
     .blog-header.layui-bg-black
       .layui-container
         ul.layui-nav
-          li.layui-nav-item#haha
+          li.layui-nav-item
             a(href="/")
               i.layui-icon.layui-icon-home 
               | 首页
