--- a/views/layout/nav.pug
+++ b/views/layout/nav.pug
@@ -1,18 +1,18 @@
 .blog-header.layui-bg-black
       .layui-container
         ul.layui-nav
-          li.layui-nav-item#haha
+          li.layui-nav-item
             a(href="/")
               i.layui-icon.layui-icon-home 
               | 首页
           li.layui-nav-item
             a(href="/") Web
           li.layui-nav-item
-            a(href="/") 大数据
+            a(href="/") nodejs
           li.layui-nav-item
-            a(href="/") Java
+            a(href="/") webpack
           li.layui-nav-item
-            a(href="/") Python
+            a(href="/") git/github
           li.layui-nav-item
             a(href="/") 关于博主
         //- 用户登录按钮
