--- a/views/layout/footer.pug
+++ b/views/layout/footer.pug
@@ -1,4 +1,3 @@
 #blog-footer
   p 2018 ©
-    a(href="//www.tanzhouedu.com/") &nbsp;44期js&nbsp;
-    a(href="//www.tanzhouedu.com/") tanzhou.com
+    a(href="//www.mrshulan.com/") &nbsp;&nbsp;树懒先生sir 
