--- a/views/layout/right_tag.pug
+++ b/views/layout/right_tag.pug
@@ -2,8 +2,8 @@
   .layui-card
     .layui-card-header 公告
     .layui-card-body
-      |潭州44期js实战
+      |多人共享博客
       <br>
       |博客
       <br>
-      |优秀的同学，绝对是优秀的同学
+      |layui_koa_mongoDB
