--- a/views/layout/tag.pug
+++ b/views/layout/tag.pug
@@ -3,15 +3,15 @@
     ul.layui-clear
       
       li
-        a(href="") HTML
+        a(href="") 前端
       li
-        a(href="") HTML
+        a(href="") 摄影
       li
-        a(href="") HTML
+        a(href="") 美食
       li
-        a(href="") HTML
+        a(href="") 骑行
       li
-        a(href="") HTML
+        a(href="") 健身
       
       
     .blog-column-right
