fix: 文章显示 更新README

--- a/views/layout/right_tag.pug
+++ b/views/layout/right_tag.pug
@@ -1,9 +1,9 @@
 .layui-col-md4
   .layui-card
-    .layui-card-header 公告
+    .layui-card-header 信息
     .layui-card-body
-      |多人共享博客
+      |多人共享博客v1
       <br>
-      |博客
+      |Q: 1934179339
       <br>
-      |layui_koa_mongoDB
+      |layui_koa2_Mongodb
